# Open_Data_QnA_Local

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  app.py  config.ini  config.local.ini  env_setup.py  opendataqna.py  prompts.yaml  pyproject.toml  sentence-Transformer.py
agents/: Agent_local.py  BuildSQLAgent.py  BuildSQLAgent_Local.py  DebugSQLAgent.py  DebugSQLAgent_Local.py  EmbedderAgent.py  ResponseAgent.py  ResponseAgent_Local.py  ValidateSQLAgent_Local.py  __init__.py  core.py  providers.py
backend-apis/: README.md  callbackTest.py  main.py
dbconnectors/: BQConnector.py  LocalBQConnector.py  LocalFirestoreConnector.py  LocalPgConnector.py  PgConnector.py  __init__.py
docs/: README.md  config_guide.md  local_setup.md
embeddings/: __init__.py  fill_embedding_column.py  kgq_embeddings.py  new_store_embeddings.py  omop_concept_embeddings.py  papers_schema.py  retrieve_embeddings.py  store_embeddings.py  store_papers.py  test_embedding.py
services/: answer_refiner.py  chat.py  faq_cache.py  omop_concept_chat.py
tests/: test_answer_refiner.py  test_api_chat_unified.py  test_chat_service.py  test_faq_cache.py  test_omop_concept_chat.py
utilities/: __init__.py
