[tool.poetry]
name = "opendataqna"
version = "0.1.0"
description = ""
authors = ["msubasioglu","l-sri","orpzs"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google = "^3.0.0"
google-api-python-client = "^2.120.0"
google-cloud = "^0.34.0"
google-cloud-aiplatform = "^1.43.0"
pandas = "^2.2.1"
pandas-gbq = "^0.21.0"
cloud-sql-python-connector = {extras = ["asyncpg"], version = "^1.7.0"}
sqlalchemy = "^2.0.27"
pgvector = "^0.2.5"
pg8000 = "^1.30.5"
#psycopg2-binary = "^2.9.9"
psycopg = {version = "^3.2", extras = ["binary"]}
tabulate = "^0.9.0"
langchain = "^0.1.9"
fsspec = "^2024.2.0"
gcsfs = "^2024.2.0"
streamlit = "^1.32.2"
google-cloud-bigquery = "^3.17.2"
google-cloud-bigquery-connection = "^1.15.3"
pyarrow = "^15.0.2"
Flask = { version = "^2.1.0", extras = ["async"]}
gunicorn = "^20.1.0"
flask-cors = "^4.0.0"
Werkzeug = "^2.3.7"
google-cloud-firestore= "^2.16.0"
firebase-admin = "^5.2.0"
sentence-transformers = "^2.6.1"
# ✅ CPU 전용 torch 고정 (필요 버전으로 맞추세요)
torch = {version = "^2.4", source = "pytorch-cpu"}



[tool.poetry.group.dev.dependencies]
pyzmq ="<26.0.0"
ipykernel = "^6.29.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# 추가: CPU 전용 PyTorch 인덱스
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"




# ❌ 아래 중 하나라도 있으면 제거하세요
# triton = "==3.4.0"
# nvidia-cublas-cu12 = ...
# nvidia-cudnn-cu12 = ...
# nvidia-... (cu12 일체)
# cuda 관련 패키지 일체

# ✅ streamlit은 백엔드에서 불필요하면 아예 빼거나,
# UI 전용 group에 분리(아래 참고)
# streamlit = "^1.38"  # (정말 필요할 때만, 존재하는 버전으로)